--- a/android-engineer.html
+++ b/android-engineer.html
@@ -62,7 +62,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/acvauctions/jobs/4350174002'>Job Application for Android Engineer at ACV Auctions</a></h5> 
+<h5><a href='https://boards.greenhouse.io/acvauctions/jobs/4350174002'>Job Application for Android Engineer at ACV Auctions</a></h5> 
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -146,7 +146,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1770173'>Job Application for Lead Android Engineer (m/f/d) at FREE NOW</a></h5> 
+<h5><a href='https://boards.greenhouse.io/freenow/jobs/1770173'>Job Application for Lead Android Engineer (m/f/d) at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -158,7 +158,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/envoy/jobs/4320498002'>Job Application for Android Engineer  at Envoy</a></h5> 
+<h5><a href='https://boards.greenhouse.io/envoy/jobs/4320498002'>Job Application for Android Engineer  at Envoy</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -191,7 +191,7 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/258d7b4c-9d59-4a6e-be7b-82bd10468bea'>Houzz - Junior Android Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/houzz/258d7b4c-9d59-4a6e-be7b-82bd10468bea'>Houzz - Junior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -336,7 +336,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1755716'>Job Application for Android Engineer at Omada Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1755716'>Job Application for Android Engineer at Omada Health</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -423,7 +423,7 @@ sushi, fried chicken, hamburgers and so on from our internet service......</p>
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on:: 2019-06-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999690129027-senior-android-sdk-engineer-m-f-d-'>Smaato Inc. Senior Android SDK Engineer (m/f/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999690129027-senior-android-sdk-engineer-m-f-d-'>Smaato Inc. Senior Android SDK Engineer (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-06-22</p>
 <hr/>
@@ -443,7 +443,7 @@ sushi, fried chicken, hamburgers and so on from our internet service......</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-06-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gojek/bf03ad3e-5662-4dfd-8a3a-8fbfae12fe7b'>GOJEK - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/bf03ad3e-5662-4dfd-8a3a-8fbfae12fe7b'>GOJEK - Android Engineer</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
