--- a/software.html
+++ b/software.html
@@ -43,7 +43,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oHzoafwy&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=nvdLTKwB'>Gigamon Careers - Senior Staff Software Engineer - Sensors</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oHzoafwy&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=nvdLTKwB'>Gigamon Careers - Senior Staff Software Engineer - Sensors</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -95,11 +95,11 @@
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999692279770-lead-software-engineer-cloud-engineering'>Visa Lead Software Engineer - Cloud Engineering | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999692279770-lead-software-engineer-cloud-engineering'>Visa Lead Software Engineer - Cloud Engineering | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lygos.workable.com/j/EDAA3D067A'>Lygos, Inc. - Jobs: Software Engineer - Apply online</a></h5> 
+<h5><a href='https://lygos.workable.com/j/EDAA3D067A'>Lygos, Inc. - Jobs: Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -151,7 +151,7 @@
 <p><span class="badge badge-light">Santa Clara, California San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1788700'>Job Application for Engineering: Linux Systems Software Engineer at Job Board</a></h5> 
+<h5><a href='https://boards.greenhouse.io/corelight/jobs/1788700'>Job Application for Engineering: Linux Systems Software Engineer at Job Board</a></h5> 
 <p><span class="badge badge-light">Columbus, Ohio San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -203,7 +203,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/expapp/jobs/4369266002'>Job Application for Software Engineer at Experience LLC</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/expapp/jobs/4369266002'>Job Application for Software Engineer at Experience LLC</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -223,11 +223,11 @@
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/software-engineer-senior-lead-11678'>Software Engineer.Senior Lead. - Akamai Careers</a></h5> 
+<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/software-engineer-senior-lead-11678'>Software Engineer.Senior Lead. - Akamai Careers</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ScienceReferralNetwork/743999692242543-real-time-embedded-software-engineer'>Science Referral Network Real Time Embedded Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ScienceReferralNetwork/743999692242543-real-time-embedded-software-engineer'>Science Referral Network Real Time Embedded Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -253,7 +253,7 @@
 <p><span class="badge badge-light">Vancouver Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zynga/job/oV3Aafws'>Zynga Careers - Senior Software Engineer (Server) - Slots</a></h5> 
+<h5><a href='https://jobs.jobvite.com/zynga/job/oV3Aafws'>Zynga Careers - Senior Software Engineer (Server) - Slots</a></h5> 
 <p><span class="badge badge-light">Toronto Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -261,7 +261,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/sugarcrm/job/oAIeafwq'>SugarCRM Careers - Junior Software Engineer (2067)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/sugarcrm/job/oAIeafwq'>SugarCRM Careers - Junior Software Engineer (2067)</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -381,11 +381,11 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://saggezza1.applytojob.com/apply/GVzfsSfegY/Frontend-Software-Engineer'>Frontend Software Engineer - Saggezza - Career Page</a></h5> 
+<h5><a href='http://saggezza1.applytojob.com/apply/GVzfsSfegY/Frontend-Software-Engineer'>Frontend Software Engineer - Saggezza - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://saggezza1.applytojob.com/apply/VIFQNAz6D4/Backend-Software-EngineerCore-Java'>Backend Software Engineer(Core Java) - Saggezza - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://saggezza1.applytojob.com/apply/VIFQNAz6D4/Backend-Software-EngineerCore-Java'>Backend Software Engineer(Core Java) - Saggezza - Career Page</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -409,7 +409,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692162834-android-software-engineer-coches-motos-net'>Adevinta Android Software Engineer Coches&amp;Motos.net | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692162834-android-software-engineer-coches-motos-net'>Adevinta Android Software Engineer Coches&amp;Motos.net | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -433,11 +433,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stanford.referrals.selectminds.com/jobs/software-developer-7435'>Software Developer - Stanford University Careers</a></h5> 
+<h5><a href='https://stanford.referrals.selectminds.com/jobs/software-developer-7435'>Software Developer - Stanford University Careers</a></h5> 
 <p><span class="badge badge-light">Redwood City Redwood City, California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://activeprospect.applytojob.com/apply/7NSLOBhQRP/Junior-Software-Engineer-Remote-Ok'>Junior Software Engineer (Remote ok) - ActiveProspect, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://activeprospect.applytojob.com/apply/7NSLOBhQRP/Junior-Software-Engineer-Remote-Ok'>Junior Software Engineer (Remote ok) - ActiveProspect, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
